3/28 23:02 クラスタリング完成

--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
           const clusterer = new markerClusterer.MarkerClusterer({ 
             map: map, 
             markers: markers.map(m => m.marker),
+            minimumClusterSize: 3,  // 3個以上でクラスタ表示
+            gridSize: 50,           // クラスタリング範囲のピクセル数
           });
 
 
