--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                   url: place.icon,
                   scaledSize: new google.maps.Size(48, 48)
                 },
-                labelContent: place.name, // 表示したいラベル名
+                labelContent: `${place.number}\n${place.name}`, // 表示したいラベル名
                 labelAnchor: new google.maps.Point(0, 0),
                 labelClass: "marker-label", // ラベルのCSSクラス
                 labelStyle: { opacity: 0.85 }
