--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     border-radius: 4px;
     font-size: 15px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    white-space: normal; /* ←改行を有効化 */
+    text-align: center;  /* ←中央揃えもおすすめ */
   }
 
   </style>
