--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
       function showSearchSuggestions(keyword) {
         const lower = keyword.toLowerCase();
         const matches = markers.filter(m => m.name && m.name.toLowerCase().includes(lower));
+        const numberMatch = m.number && m.number.toLowerCase().includes(lower);
+        return nameMatch || numberMatch;
 
         if (matches.length === 0) {
           searchResults.innerHTML = "<div style='padding:6px; color:#666;'>候補が見つかりません</div>";
@@ -238,6 +240,7 @@
               markers.push({
                 marker,
                 name: place.name,
+                number: place.number || "",
                 infoContent,
               });
 
