--- a/index.html
+++ b/index.html
@@ -136,7 +136,17 @@
 
       function showSearchSuggestions(keyword) {
         const lower = keyword.toLowerCase();
-        const matches = markers.filter(m => m.name && m.name.toLowerCase().includes(lower));
+        //const matches = markers.filter(m => m.name && m.name.toLowerCase().includes(lower));
+
+
+        const matches = markers.filter(m => {
+        const nameMatch = m.name && m.name.toLowerCase().includes(lower);
+        const numberMatch = m.number && m.number.toString().toLowerCase().includes(lower);
+        return nameMatch || numberMatch;
+        });
+
+
+
 
         if (matches.length === 0) {
           searchResults.innerHTML = "<div style='padding:6px; color:#666;'>候補が見つかりません</div>";
