--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 areaInfoDiv.textContent = `エリア: ${place.area || '情報なし'}`;
 
                 areaInfoDiv.innerHTML = `
-                <strong>${place.name}</strong><br>
+                <strong>${place.name}</strong>
                 エリア: ${place.area || '情報なし'}<br>
                 番号: ${place.number || '不明'}
               `;
