--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 areaInfoDiv.textContent = `エリア: ${place.area || '情報なし'}`;
 
                 areaInfoDiv.innerHTML = `
-                <strong>${place.organization}${place.number }${place.name}</strong>
+                <strong>${place.organization}${place.number}& ensp ; ${place.name}</strong>
                 エリア: ${place.area || '情報なし'}
                 タイプ: ${place.type || '不明'}
                 周期: ${place.cycle || '情報なし'}
