--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           }
         });
 
-        sharedInfoWindow = new google.maps.InfoWindow();
+        //sharedInfoWindow = new google.maps.InfoWindow();
 
         try {
           const snapshot = await getDocs(collection(db, "mapAllBox"));
@@ -268,33 +268,20 @@
               });
                             
 
-              markers.push({
-                marker,
-                name: place.name,
-                number: place.number || "",
-                infoContent,
-              });
-
               marker.addListener("click", () => {
-                sharedInfoWindow.setContent(infoContent);
-                sharedInfoWindow.open(map, marker);
-
-                 // ↓ 地図下にエリア情報を表示！
+                infoWindow.open(map, marker);
+                
                 const areaInfoDiv = document.getElementById("areaInfo");
-                areaInfoDiv.textContent = `エリア: ${place.area || '情報なし'}`;
-
                 areaInfoDiv.innerHTML = `
-                <strong>${place.organization}${place.number} ${place.name}</strong>
-                　エリア: ${place.area || '情報なし'}
-                　タイプ: ${place.type || '不明'}
-                　周期: ${place.cycle || '情報なし'}
-                　担当: ${place.poc || '不明'}
-                　住所: ${place.address || '不明'}
-              `;
-
-
-
+                  <strong>${place.organization}${place.number} ${place.name}</strong>
+                  　エリア: ${place.area || '情報なし'}
+                  　タイプ: ${place.type || '不明'}
+                  　周期: ${place.cycle || '情報なし'}
+                  　担当: ${place.poc || '不明'}
+                  　住所: ${place.address || '不明'}
+                `;
               });
+
             }
           });
 
