--- a/index.html
+++ b/index.html
@@ -39,6 +39,47 @@
       color: red;
       font-weight: bold;
     }
+
+    #header {
+      display: flex;
+      justify-content: space-between; /* 左右に配置（タイトル左寄せ・ボタン右寄せ） */
+      align-items: center;
+      padding: 10px 20px;
+    }
+
+    #pageTitle {
+      margin: 0 auto;       /* 中央揃え用 */
+      font-size: 1.5rem;
+      text-align: center;
+      flex: 1;              /* タイトルが中央に来やすくなる */
+    }
+
+
+      #logoutButton {
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 16px;
+      font-size: 1rem;
+      cursor: pointer;
+      display: none;
+    }
+    #searchWrapper {
+      display: flex;
+      justify-content: center;  /* ← 中央寄せここ！ */
+      align-items: center;
+      gap: 8px;
+    }
+
+    #searchButton {
+      background-color: #1976d2;
+      color: white; /* ← 文字を見やすく白に */
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
     .marker-label {
     background-color: #00568b; /* 薄い青（ライトスカイブルー） */
     color: white;             /* 文字色を白に設定 */
@@ -54,8 +95,8 @@
     display: none;
     }
 
-
   </style>
+
   <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-analytics.js"></script>
   <!-- 追加のMarkerWithLabelライブラリ読み込み -->
   <script src="https://cdn.jsdelivr.net/npm/@googlemaps/markerwithlabel/dist/index.min.js"></script>
@@ -71,13 +112,13 @@
     <button onclick="login()">ログイン</button>
     <p id="loginMessage"></p>
   </div>
-
+  <div id="header">
+    <h2 id="pageTitle">千葉県BOX一覧MAP</h2>
+    <button onclick="logout()" id="logoutButton">ログアウト</button>
+  </div>
   <div id="mapSection">
-    <h2>千葉県Box一覧MAP</h2>
-    <button onclick="logout()">ログアウト</button>
-    <div style="margin: 10px 0; position: relative;">
-      <input type="text" id="searchInput" placeholder="BOXを検索"
-             style="padding:6px; width:250px; font-size:1rem;">
+    <div id="searchWrapper" style="margin: 10px 0; position: relative;">
+      <input type="text" id="searchInput" placeholder="BOXを検索" style="padding:6px; width:250px; font-size:1rem;">
       <button id="searchButton" style="padding:6px 12px; font-size:1rem;">検索</button>
       <div id="searchResults"
            style="background:#fff; border:1px solid #ccc; max-height:200px; overflow-y:auto;
@@ -129,6 +170,7 @@
         document.getElementById("loginSection").style.display = "none";
         document.getElementById("mapSection").style.display = "block";
         document.getElementById("areaInfo").style.display = "block";
+        document.getElementById("logoutButton").style.display = "block";
         loadGoogleMaps();
         logEvent(analytics, 'map_viewed');
       } else {
