--- a/index.html
+++ b/index.html
@@ -190,14 +190,18 @@
         const lower = keyword.toLowerCase();
         //const matches = markers.filter(m => m.name && m.name.toLowerCase().includes(lower));
 
+         // 🔻 ① 全マーカー非表示にする
+        markers.forEach(m => m.marker.setMap(null));
 
+        // 🔍 ② 検索にマッチしたものだけ取り出す
         const matches = markers.filter(m => {
         const nameMatch = m.name && m.name.toLowerCase().includes(lower);
         const numberMatch = m.number && m.number.toString().toLowerCase().includes(lower);
         return nameMatch || numberMatch;
         });
 
-
+        // 🔁 ③ 検索にヒットしたものだけ map に戻す
+        matches.forEach(m => m.marker.setMap(map));
 
 
         if (matches.length === 0) {
